<resources>
    <string name="app_name">ناجی</string>

    <string name="navigation_drawer_open">منوی باز</string>
    <string name="navigation_drawer_close">منوی بسته</string>
    <string name="google_maps_key">AIzaSyDshxx_6CHkXyDYeRZamb2OghJjl1vqQrw</string>
    <string name="action_settings">تنظیمات</string>
    <string name="region">منطقه</string>
    <string name="city_name">نام شهر</string>
    <string name="depth">عمق</string>
    <string name="size">بزرگی</string>
    <string name="time">لحظه وقوع</string>
    <string name="gps_dialog_msg">آیا مایل به روشن شدن GPS خود هستید؟</string>
    <string name="no">خیر</string>
    <string name="yes">بله</string>
    <string name="curLoc">موقعیت مکانی فعلی شما: </string>
    <string name="najidesc">با روشن گذاشتن موقعیت مکانی گوشی و اینترنت خود در زمان زلزله دیگران میتونند مکان شما رو پیدا کنند.</string>
    <string name="telegramnotinstalled">برای استفاده از این قسمت نیاز به اپلیکیشن تلگرام دارید.</string>
    <string name="events">رخداد‌های اخیر</string>
    <string name="naji">ناجی</string>
    <string name="tehransafes">مکان‌های امن تهران</string>
    <string name="help">راهنما</string>
    <string name="exit">خروج</string>
    <string name="telegramchannel">نکات آموزشی</string>
    <string name="cameraRequest">ناجی برای روشن کردن فلش نیاز به دسترسی دوربین دارد.</string>
    <string name="ext_mem_permission">ناجی برای دانلود نیاز به دسترسی حافظه داره</string>
    <string name="emrgency_signals">سیگنال‌های اضطراری</string>
    <string name="mobile">لطفا شماره تلفن همراه خود را وارد کنید:</string>
    <string name="loginRegister">ورود یا ثبت نام</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="internet_Fail">اینترنت شما متصل نیست.</string>
    <string name="auto_send_location">ارسال خودکار موقعیت مکانی شما به سرور</string>
    <string name="create_error_no_name">بایستی شماره سیم کارت خود را وارد نمایید.</string>
    <string name="mobile_number_invalid">شماره تلفن همراه وارد شده اشتباه است.</string>
    <string name="wrong_number">لطفا شماره موبایل خود را به درستی وارد کنید</string>
    <string name="location_send_successfully">موقعیت مکانی شما با موفقیت ارسال شد</string>
    <string name="error_in_webservices">خطا در ارسال</string>
    <string name="no_internet_conection">اینترنت شما متصل نیست!!</string>
    <string name="cantfind_location">ناجی قادر به پیدا کردن موقعیت شما نیست. از روشن بودن لوکیشن تلفن همراه خود مطمئن شوید و مجددا تلاش کنید.</string>
    <string name="device_depricated">با عرض تاسف دستگاه شما از این قابلیت پشتیبانی نمی کند.</string>
    <string name="skip">رد کردن</string>
    <string name="nothing">موردی یافت نشد.</string>
    <string name="flash_light">چراغ قوه</string>
    <string name="ledlight">نور صفحه</string>
    <string name="loud_noise">صدای بلند</string>
    <string name="username">نام کاربری</string>
    <string name="shahrdari">شهرداری تهران</string>
    <string name="helalahmar">هلال احمر</string>
    <string name="refs">منابع</string>
    <string name="telegramtips">آموزش‌های تلگرامی</string>
    <string name="fail">خطا</string>
    <string name="vibrate">لرزش</string>
    <string name="fail_connect_server">خطا در اتصال به سرور</string>
    <string name="download_fail">خطا در هنگام دانلود فایل</string>
    <string name="file"> نقشه امن محله </string>
    <string name="downloading">در حال دانلود </string>
    <string name="regions">منطقه</string>
    <string name="successDownload"> با موفقیت دانلود شد. </string>
    <string name="request_exceed_error">در هر ۳۰ دقیقه فقط یکبار امکان ارسال دارید.</string>
    <string name="zhepphisic">موسسه ژئوفيزیک، دانشگاه تهران</string>
    <string name="flash">فلاش</string>
    <string name="nav_rate_us">ثبت نظر</string>
    <string name="most_earthquicks">نقشه لرزه خیزی</string>
    <string name="press_back_again">برای خروج از برنامه دوباره دکمه بازگشت را فشار دهید.</string>
    <string name="update_app">آپدیت</string>
    <string name="cancel">انصراف</string>
    <string name="occurance_place">محل وقوع</string>
    <string name="LearningTips">نکات آموزشی</string>
    <string name="donat">حمایت از برنامه</string>
    <string name="donatedesc1">تجارت خوبه و تبلیغات بد نیست، اما به اینجا تعلق نداره.</string>
    <string name="donatedesc2">وقتی که منو حامد ناجی رو نوشتیم، می تونستیم مثل بقیه برنامه های موجود، فروشی یا پر از بنر‌های تبلیغاتی کنیمش اما تصمیم به انجام کاری متفاوت گرفتیم.</string>
    <string name="donatedesc3">سلامت و تندرستی شما بهترین محرک و انگیزه برای شروع و ادامه این مسیره، اما برخی قسمت‌ها مثل اجاره و نگهداری سرور و ...هزینه‌بر هستند و ما هم توسط شخص یا نهادی حمایت نمیشیم.</string>
    <string name="donatedesc4">ممکنه همه نخوان یا نتونن برای توسعه و نگهداری ناجی حمایت کنن، مشکلی نیست واین برنامه همچنان رایگان میمونه. شما هم هر‌آنچه که میتونید برای محافظت و توسعه ناجی اهدا کنید.</string>
    <string name="doit">پرداخت</string>

    <string name="donate">حمایت از برنامه</string>
    <string name="donatesuccess">با تشکر. اهدای شما انجام شد.</string>
    <string name="tryAgaain">عملیات با مشکل مواجه شد. لطفا دوباره تلاش کنید...</string>
    <string name="location_needed">برای استفاده از این قسمت نیاز به دسترسی موقعیت یاب شما داریم.</string>
    <string name="share_with_freinds">معرفی به دوستان</string>
    <string name="share_with_friends_text">من از ناجی استفاده میکنم و خیالم راحته که زمان زلزله اطلاعات موقعیتم رو در اختیار تیم های امدادی میزاره. تو هم میتونی از لینک زیر دانلودش کنی:</string>
    <string name="location_shouldOn">برای استفاده از این قابلیت باید مکان یاب خود را روشن کنید.</string>
    <string name="bazarLink">https://cafebazaar.ir/app/ir.zelzele/?l=fa</string>
    <string name="notSupportedPhone">متاسفانه گوشی شما از این قابلیت پشتیبانی نمیکند.</string>
    <string name="intro_first_title">در زمان وقوع حادثه</string>
    <string name="intro_first_desc">با ناجی میتونی موقعیت مکانی خودت رو در هنگام زلزله به تیم‌های امدادی برسونی.</string>
    <string name="intro_first_desc2">وقت زلزله نگران هیچی نباش. ناجی رو که روی گوشیت نصب کنی به آسونی پیدا میشی.</string>
    <string name="intro_safePlaces_title">مکان‌های امن</string>
    <string name="intro_safePlaces_desc">نقشه مکان‌های تخلیه امن رو میتونی از ناجی دانلود کنی</string>
    <string name="intro_learn_title">آموزش</string>
    <string name="intro_learn_desc">با آموزش‌هایی که توی ناجی قرار گرفته، میتونی در برابر زلزله آمادگی بیشتری داشته باشی.</string>
    <string name="telegram">https://t.me/najiapp</string>
    <string name="auto_send_hint">فعال سازی ارسال خودکار، مصرف باتری را افرایش می دهد.</string>
    <string name="NotRegister">ورود بدون ثبت نام</string>
    <string name="input_number">ثبت شماره همراه</string>
    <string name="registerNumber">ثبت</string>


</resources>
