<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:id="@+id/mainfrag"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".general.activities.DonateActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/lindesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:gravity="right"
                android:orientation="vertical">

                <ir.zelzele.customview.CustomTextView
                    android:id="@+id/txt_donatedesc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_marginRight="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/donatedesc1"
                    android:textColor="@color/black"
                    android:textDirection="anyRtl"
                    android:textSize="17sp"
                    app:Customfont="parastoo.ttf" />

                <ir.zelzele.customview.CustomTextView
                    android:id="@+id/txt_donatedesc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_marginRight="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/donatedesc2"
                    android:textColor="@color/black"
                    android:textDirection="anyRtl"
                    android:textSize="17sp"
                    app:Customfont="parastoo.ttf" />

                <ir.zelzele.customview.CustomTextView
                    android:id="@+id/txt_donatedesc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_marginRight="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/donatedesc3"
                    android:textColor="@color/black"
                    android:textDirection="anyRtl"
                    android:textSize="17sp"
                    app:Customfont="parastoo.ttf" />

                <ir.zelzele.customview.CustomTextView
                    android:id="@+id/txt_donatedesc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_marginRight="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/donatedesc4"
                    android:textColor="@color/black"
                    android:textDirection="anyRtl"
                    android:textSize="17sp"
                    app:Customfont="parastoo.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radiohm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rd_0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:text="1000 تومان" />

                    <!--
                                    android:theme="@style/MyRadioButton"
                    -->
                    <RadioButton
                        android:id="@+id/rd_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:text="2000 تومان" />

                    <RadioButton
                        android:id="@+id/rd_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingEnd="10dp"
                        android:text="5000 تومان" />

                </RadioGroup>

                <ir.zelzele.customview.CustomButtonView
                    android:id="@+id/btnDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/circle_bck_accent"
                    android:text="@string/doit"
                    android:textSize="@dimen/font_size_16sp"
                    android:textStyle="bold"
                    android:typeface="normal" />


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>