<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/margin_8"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.CardView
        android:id="@+id/card_view_events_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:elevation="8dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/lay_item"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="@dimen/padding_16"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingStart="@dimen/padding_16"
            android:paddingTop="10dp">
            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"

                        android:gravity="end"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/imgv_loc"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            card_view:srcCompat="@drawable/ic_location_searching" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="start"

                        android:padding="8dp">

                        <ir.zelzele.customview.CustomTextView
                            android:id="@+id/txt_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/city_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_size_18sp"
                            card_view:Customfont="parastoo-Bold.ttf" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:gravity="end"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/imgv_time"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            card_view:srcCompat="@drawable/ic_access_time_black_24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="start"

                        android:padding="8dp">

                        <ir.zelzele.customview.CustomTextView
                            android:id="@+id/txt_Date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/time"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_size_16sp"
                            card_view:Customfont="parastoo-Bold.ttf" />
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <ir.zelzele.customview.CustomTextView
                android:id="@+id/txt_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/depth"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                card_view:Customfont="parastoo-Bold.ttf"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

            </ir.zelzele.customview.CustomTextView>


            <ir.zelzele.customview.CustomTextView
                android:id="@+id/txt_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="20sp"
                card_view:Customfont="parastoo-Bold.ttf"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </androidx.appcompat.widget.CardView>

</LinearLayout>
